--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.0.6",
+    "@turf/buffer": "^5.1.5",
+    "@turf/helpers": "^6.1.3",
+    "@turf/intersect": "^6.1.1",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
     "mapbox-gl": "^0.44.2",
     "react": "^16.2.0",
